# kinova_control_experiments

./: .gitignore  CMakeLists.txt  install_vscode_ext.sh
config/: kinova.cfg
core/: CMakeLists.txt
core/controller/: CMakeLists.txt
core/kinova_api/: CMakeLists.txt
executables/: control_kinova_posvel.cpp
interface/: CMakeLists.txt
src/: CMakeLists.txt  impedance_control_posvel.cpp
util/: CMakeLists.txt  constants.hpp
